--- a/DeviceHandler/res/xml/slider_panel.xml
+++ b/DeviceHandler/res/xml/slider_panel.xml
@@ -51,4 +51,22 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/category_vibrator">
+        <com.slim.device.settings.VibratorStrengthPreference
+            android:key="vib_strength"
+            android:title="@string/vib_strength_title_head"
+            android:summary="@string/vib_strength_summary_head" />
+
+        <com.slim.device.settings.VibratorCallStrengthPreference
+            android:key="vib_call_strength"
+            android:title="@string/vib_call_strength_title_head"
+            android:summary="@string/vib_call_strength_summary_head" />
+
+        <com.slim.device.settings.VibratorNotifStrengthPreference
+            android:key="vib_notif_strength"
+            android:title="@string/vib_notif_strength_title_head"
+            android:summary="@string/vib_notif_strength_summary_head" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
