--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -21,12 +21,20 @@
 
     <!-- Array of paths to the libraries that contain device specific keyhandlers -->
     <string-array name="config_deviceKeyHandlerLibs" translatable="false">
-        <item>/system/priv-app/DeviceHandler/DeviceHandler.apk</item>
+        <item>/system/app/DeviceHandler/DeviceHandler.apk</item>
     </string-array>
 
     <!-- Array of names of the keyhandler classes -->
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
         <item>com.slim.device.KeyHandler</item>
     </string-array>
+
+    <!-- List supported color modes. -->
+    <integer-array name="config_availableColorModes">
+        <item>0</item> <!-- COLOR_MODE_NATURAL -->
+        <item>1</item> <!-- COLOR_MODE_BOOSTED -->
+        <item>2</item> <!-- COLOR_MODE_SATURATED -->
+        <item>3</item> <!-- COLOR_MODE_AUTOMATIC -->
+    </integer-array>
 
 </resources>
