--- a/Doze/res/xml/doze_settings.xml
+++ b/Doze/res/xml/doze_settings.xml
@@ -45,7 +45,8 @@
             android:key="gesture_hand_wave"
             android:defaultValue="false"
             android:title="@string/hand_wave_gesture_title"
-            android:summary="@string/hand_wave_gesture_summary" />
+            android:summary="@string/hand_wave_gesture_summary"
+            android:icon="@drawable/ic_hand" />
 
         <SwitchPreference
             android:key="gesture_pocket"
