op-common: add slider string to devicehandlerstrings
Unsure if this is really needed, but add the "notification slider" string like the screen-off gesture string to devicehandlerstrings.

--- a/overlay/packages/apps/Settings/res/values/devicehandlerstrings.xml
+++ b/overlay/packages/apps/Settings/res/values/devicehandlerstrings.xml
@@ -63,5 +63,6 @@
 
     <!-- Device specific settings -->
     <string name="screen_off_gesture_settings_title">Screen off gestures</string>
+    <string name="notification_slider">Notification slider</string>
 
 </resources>
